Bug 483504 - holiday display doesn't update after picking holidays
Summary: holiday display doesn't update after picking holidays
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: otherviews (other bugs)
Version First Reported In: 5.24.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-14 01:49 UTC by test
Modified: 2024-04-08 16:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description test 2024-03-14 01:49:31 UTC
SUMMARY
The holiday display doesn't update after picking holidays.  You need to restart korganizer for the holidays to show up in the day view.

(Why is there no component for dayview?)

STEPS TO REPRODUCE
1. start korgnizer (for the first time)
2. pick holidays for some country (or two countries) in the settings
3. apply the settings and close them by clicking on ok
4. click on a day that is a holiday in the month view

OBSERVED RESULT
No holidays are showing up in the dayview.  (They do show up in the tooltip of the month view when hovering the mouse pointer over the day; but who would notice.)

EXPECTED RESULT
The holidays should show up in the day view when that day is a holiday once they have been picked without needing to restart korganizer.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 39
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.115.0
Qt Version: 5.15.12
Kernel Version: 6.7.7-200.fc39.x86_64 (64-bit)
Graphics Platform: X11
Processors: 16 × Intel® Xeon® CPU E5-2637 v4 @ 3.50GHz
Memory: 125.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2
Manufacturer: Dell Inc.
Product Name: Precision Rack 7910

ADDITIONAL INFORMATION
You can also unpick all holidays in the settings and the dayview doesn't get updated, either.  The tooltip is being updated in that no holidays are shown.  So every time you pick or unpick holidays, you need to restart korganizer for the dayview to correspond with the tooltip.

Please consider https://bugs.kde.org/show_bug.cgi?id=483502 : with changing the holidays that were picked, colours in the month view would need to be updated accordingly.
Comment 1 Bug Janitor Service 2024-04-07 13:07:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/korganizer/-/merge_requests/121
Comment 2 Daniel Vrátil 2024-04-08 16:38:59 UTC
Git commit 37bf2119cf46302df5c266a886ac57599844030d by Daniel Vrátil.
Committed on 08/04/2024 at 15:50.
Pushed by dvratil into branch 'master'.

Remove options from KOPrefs that already exist in CalendarSupport::KCalPrefs

Some of the holiday-related options were duplicated in both KOPrefs (KOrganizer
config) and KCalPrefs (CalendarSupport config used by other components like
EventViews). While both objects operate on top of the same config file, if the
holidays option got changed through one of the objects, the other one was unaware
of the change.

This caused a weird behavior where re-configuring holidays in KOrganizer showed
up only where KOPrefs object was used to read the configuration, but wouldn't
show up in event views, which use KCalPrefs until the application was
restarted.
FIXED-IN: 24.05

M  +2    -2    src/calendarview.cpp
M  +2    -2    src/kocorehelper.h
M  +8    -7    src/prefs/koprefsdialogtime.cpp
M  +0    -17   src/settings/korganizer.kcfg

https://invent.kde.org/pim/korganizer/-/commit/37bf2119cf46302df5c266a886ac57599844030d